[package]
name = "wcii"
version = "0.1.0"
authors = ["wachiii <wachara@mohara.co>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
dioxus-logger = "0.5.1"
web-sys = "0.3"
gloo-events = "0.2.0"
dioxus-use-window = "0.7.0"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
